http lib and model skeleton

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,24 @@
 	<title>Test</title>
 </head>
 <body>
-	
+
+<!-- Orders -->
+<h1>Orders</h1>
+<ul class="orders-list">
+	<li  class="order">
+		<span class="id">Order id</span>
+		<span class="name">Order name</span>
+		<span class="geo-lat">Geo latitude</span>
+		<span class="geo-long">Geo longitude</span>
+		<span class="price">Price</span>
+	</li>
+</ul>
+
+
+<script type="text/javascript" src="js/lib/http.js"></script>
 <script type="text/javascript" src="js/app/index.js"></script>
+<script type="text/javascript" src="js/orders/model.js"></script>
+<script type="text/javascript" src="js/orders/view.js"></script>
+
 </body>
 </html>
